ingress/ingress-resource-with-rewrite.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: $2
  name: rewrite
  namespace: default
spec:
  rules:
  - host: rewrite.bar.com
    http:
      paths:
      - backend: 
        serviceName: http-svc
        servicePort: 80
      path: /something(/|$)(.*)
